Closed Bug 1787641 Opened 3 years ago Closed 3 years ago

Crash in [@ nsUrlClassifierStreamUpdater::Notify]

Categories

(Toolkit :: Safe Browsing, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox-esr102 --- wontfix
firefox104 --- wontfix
firefox105 --- fixed
firefox106 --- fixed

People

(Reporter: gsvelto, Assigned: dimi)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/80749064-e2d8-4e79-96ec-dd1640220826

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0 xul.dll nsUrlClassifierStreamUpdater::Notify toolkit/components/url-classifier/nsUrlClassifierStreamUpdater.cpp:851
1 xul.dll nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:655
2 xul.dll nsTimerEvent::Run xpcom/threads/TimerThread.cpp:365
3 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:851
4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1205
5 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:85
6 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:374
7 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:356
8 xul.dll nsBaseAppShell::Run widget/nsBaseAppShell.cpp:150
9 xul.dll nsAppShell::Run widget/windows/nsAppShell.cpp:614

The crash is caused by mChannel being NULL. It appears to be a regression as it happens only on nightly, the earliest affected buildid seems to be 20220816190318.

mChannel might be null if download failure occurs right after receiving quit-application event.

Assignee: nobody → dlee
Status: NEW → ASSIGNED
Pushed by dlee@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a815886a450b Check existence of a channel before canceling it r=timhuang
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch

The patch landed in nightly and beta is affected.
:dimi, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox105 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(dlee)

Comment on attachment 9292796 [details]
Bug 1787641 - Check existence of a channel before canceling it r=timhuang

Beta/Release Uplift Approval Request

  • User impact if declined: Firefox crashes
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Only add a nullptr check
  • String changes made/needed:
  • Is Android affected?: Unknown
Flags: needinfo?(dlee)
Attachment #9292796 - Flags: approval-mozilla-beta?

Comment on attachment 9292796 [details]
Bug 1787641 - Check existence of a channel before canceling it r=timhuang

Approved for 105.0b9.

Attachment #9292796 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: