Bug 1787641 - Check existence of a channel before canceling it r=timhuang

mChannel might be null if download failure occurs right after receiving `quit-application` event.

Differential Revision: https://phabricator.services.mozilla.com/D156281